# networking

./: .gitignore  CMakeLists.txt  Makefile  README.md  networking.h  tcp_server.c  tcp_server.h
include/: fork_main.h  socket_factory.h  test_main.h
socket_operations/: ssl_operations.c  ssl_operations.h  tcp_operations.c  tcp_operations.h  udp_operations.c  udp_operations.h
sockets/: socket_factory.c
src/: fork_main.c  ftpc.c  ftpd.c  ftps.c  socket_factory.c  socket_factory.h  test_main.c  udpc.c
src/ftp/: ftpd.c
src/http/: httpc.c  httpd.c  https.c
src/socket_factory/: socket_factory.c
src/tcp/: tcpc.c  tcps.c
src/udp/: udps.c
tcp/: tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h
udp/: udp_client.c  udp_client.h  udp_server.c  udp_server.h
uds/: uds_client.c  uds_client.h  uds_server.c  uds_server.h
